--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -5,7 +5,7 @@
     header.thread-list-item__header
       .thread-list-item__header-title-container
         - if report.wip?
-          .thread-list-item__header-icon WIP
+          .thread-list-item__header-icon.is-wip WIP
         h2.thread-list-item__title(itemprop="name")
           = link_to report.title, report, itempro: "url", class: "thread-list-item__title-link"
       - if current_user == report.user
