slect2のアップデート

--- a/app/assets/stylesheets/blocks/header/_header.sass
+++ b/app/assets/stylesheets/blocks/header/_header.sass
@@ -12,6 +12,7 @@ $header-height: 3.125rem
   height: $header-height
 
 .header__title
+  text-decoration: none
   display: flex
   align-items: center
   transition: all .2s ease-out
