--- a/app/views/home/_job_seeking_users.html.slim
+++ b/app/views/home/_job_seeking_users.html.slim
@@ -5,6 +5,8 @@
   - users.each do |user|
     .thread-list-item
       .thread-list-item__inner
+        label.thread-list-item__show-user-detail(for="show-user-detail-#{user.id}")
+          i.fas.fa-angle-down
         .thread-list-item__author
           = link_to user do
             = image_tag user.avatar_image(44), class: "thread-list-item__author-icon is-#{user.role}"
@@ -17,12 +19,14 @@
           .thread-list-item-meta__items
             .thread-list-item-meta__item
               = link_to "", class: "thread-list-item-meta__item-link" do
-                | 日報一覧
+                | 日報一覧（#{user.reports.count}）
             .thread-list-item-meta__item
               = link_to "", class: "thread-list-item-meta__item-link" do
-                | 提出物一覧
-      input(id="show-user-detail-#{user.id}" type="checkbox")
+                | 提出物一覧（#{user.products.count}）
+      input.a-toggle-checkbox(id="show-user-detail-#{user.id}" type="checkbox")
       .thread-list-item__user-detail
         .thread-list-item__body
           = simple_format user.description
         = render "users/metas", user: user
+        label.thread-list-item__close-user-detail(for="show-user-detail-#{user.id}")
+          | 閉じる
