--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,6 +30,7 @@ html.is-application lang="ja"
       - if display_header?
         = render "header"
       = render "flash"
+      = render "required_field"
       main.page
         = yield
     - if display_recent_reports?
