--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -41,21 +41,6 @@
           p
             | 姓・名は必ず本名を（漢字がある場合は漢字で）入力してください。
 
-    .form-item
-      = f.label :avatar, class: "a-label is-required"
-      .form-item-file-input.js-file-input.a-file-input.is-avatar
-        label.js-file-input__preview
-          - if f.object.avatar.attached?
-            = image_tag f.object.avatar_image
-            p 画像を変更
-          - else
-            p 画像を選択
-          = f.file_field :avatar
-
-      - unless user.adviser?
-        .a-form-help
-          p 著作権侵害にならない画像を使用してください。画像は正方形に切り抜かれます。
-
     - unless user.adviser?
       .form-item.is-hidden
         // コース
@@ -79,18 +64,6 @@
             | この情報は他のフィヨルドブートキャンプ参加者には公開されません。
 
       .form-item
-        // 現在の所属組織
-        = f.label :organization, class: "a-label is-required"
-
-        = f.text_field :organization, class: "a-text-input", autocomplete: :off, placeholder: "XXX大学XXX学部XXX学科XXX専攻"
-        - unless user.adviser?
-          .a-form-help
-            p
-              | 会社名・学校名などを入力してください（働いていない場合は「なし」としてください）。
-              br
-              | この情報は他のフィヨルドブートキャンプ参加者には公開されません。
-
-      .form-item
         // 学習に使うOS
         = f.label :os, "学習に使うOS", class: "a-label is-required"
         .a-button.is-md.is-secondary.is-select.is-block
@@ -99,6 +72,7 @@
         .a-form-help
           p
             | カリキュラムはMac向けののみなのでWindowsでは受講できません。Macを持ってない方は用意する必要があります。Linux経験者であればLinuxで学習を行っても構いませんが、Linuxであるがために学習が進まなかった場合にサポートができない場合があります。
+
       .form-item
         // 主な学習場所
         = f.label :study_place, class: "a-label is-required"
@@ -122,24 +96,59 @@
           - options = options_for_select(User.experiences.map { |k, v| [t("activerecord.enums.user.experience.#{k}"), k] }, selected: f.object.experience)
           = f.select :experience, options, include_blank: "- 選択してください -"
 
-    .form-item
-      ruby:
-        if user.adviser?
-          placeholder = "株式会社XXXXの開発チームマネージャーのXXXXXです。"
-          required_class = ""
-          help_text = "この情報は他のフィヨルドブートキャンプ参加者に公開されます。"
-        else
-          placeholder = "XXXXと申します。月・水・金の 10:00 〜 19:00 に活動します。XXXXと考えたため、プログラマーとして就職することを決意しました。今はXXXXで働いています。XXXXが好きでよくXXXXしています。XXXXが好きな方、仲良くしてください！！"
-          required_class = "is-required"
-          help_text = "この情報は他のフィヨルドブートキャンプ参加者に公開されます。あとからでも内容を変更することができます。"
-        end
-      = f.label :description, class: "a-label #{required_class}"
-      = f.text_area :description, class: "a-text-input", placeholder: placeholder
-      .a-form-help
-        p = help_text
-
     - if from == :edit
-      - if !user.adviser? && !user.admin? && !user.trainee? && admin_login?
+      .form-item
+        = f.label :avatar, class: "a-label"
+        .form-item-file-input.js-file-input.a-file-input.is-avatar
+          label.js-file-input__preview
+            - if f.object.avatar.attached?
+              = image_tag f.object.avatar_image
+              p 画像を変更
+            - else
+              p 画像を選択
+            = f.file_field :avatar
+
+        - unless user.adviser?
+          .a-form-help
+            p 著作権侵害にならない画像を使用してください。画像は正方形に切り抜かれます。
+
+      .form-item
+        // 現在の所属組織
+        = f.label :organization, class: "a-sm-label"
+        = f.text_field :organization, class: "a-sm-text-input", autocomplete: :off, placeholder: "XXX大学XXX学部XXX学科XXX専攻"
+        - unless user.adviser?
+          .a-form-help
+            p
+              | 会社名・学校名などを入力してください（働いていない場合は「なし」としてください）。
+              br
+              | この情報は他のフィヨルドブートキャンプ参加者には公開されません。
+
+      .form-item
+        // フィヨルドブートキャンプをどこで知りましたか？
+        = f.label :how_did_you_know, "フィヨルドブートキャンプをどこで知りましたか？", class: "a-sm-label"
+        = f.text_area :how_did_you_know, class: "a-sm-text-input", placeholder: "大学時代の先輩である株式会社XXXXでプログラマをやっているXXXXさんから勧められて。"
+        .a-form-help
+          p
+            | 自分で検索エンジンを使って見つけた場合は、
+            | そのときの検索キーワードなども覚えていたら入力してください。
+            | 誰かに紹介してもらった場合、その誰かもお教えください。
+            br
+            | この情報は他のフィヨルドブートキャンプ参加者には公開されません。
+
+      .form-item
+        ruby:
+          if user.adviser?
+            placeholder = "株式会社XXXXの開発チームマネージャーのXXXXXです。"
+            help_text = "この情報は他のフィヨルドブートキャンプ参加者に公開されます。"
+          else
+            placeholder = "XXXXと申します。月・水・金の 10:00 〜 19:00 に活動します。XXXXと考えたため、プログラマーとして就職することを決意しました。今はXXXXで働いています。XXXXが好きでよくXXXXしています。XXXXが好きな方、仲良くしてください！！"
+            help_text = "この情報は他のフィヨルドブートキャンプ参加者に公開されます。あとからでも内容を変更することができます。"
+          end
+        = f.label :description, class: "a-sm-label"
+        = f.text_area :description, class: "a-sm-text-input", placeholder: placeholder
+        .a-form-help
+          p = help_text
+      - unless user.adviser?
         .form-item
           // 就職活動中
           = f.label :job_seeking, class: "a-label"
