--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -41,8 +41,7 @@ header.page-header
                 = l @checks.last.created_at.to_date, format: :short
               .stamp__content.is-user-name
                 = @checks.last.user.login_name
-          .thread-meta
-            = render "thread/thread_watch", watchable: @report
+          #js-watch(data-watchable-id="#{@report.id}", data-watchable-type="report")
         - if @report.practices.present?
           .report-practices
             ul.report-practices__items
