日報にウォッチ機能をつけられるようにした

--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -34,8 +34,7 @@ header.page-header
                 | WIP
             = @report.title
           #js-check-stamp(data-checkable-id="#{@report.id}" data-checkable-type="report")
-          .thread-header__lower-side
-            = render "thread/thread_watch", watchable: @report
+          #js-watch(data-watchable-id="#{@report.id}", data-watchable-type="report")
         - if @report.practices.present?
           .report-practices
             ul.report-practices__items
