ユーザー情報修正フォームのリファクタ

--- a/app/assets/stylesheets/blocks/form/_form.sass
+++ b/app/assets/stylesheets/blocks/form/_form.sass
@@ -7,6 +7,8 @@
   +margin(horizontal, auto)
 
 .form-item
-  margin-bottom: 1rem
+  margin-bottom: 1.75rem
   &:last-child
     margin-bottom: 0
+  &.is-hidden
+    display: none
