--- a/app/assets/stylesheets/blocks/report/_recent-reports.sass
+++ b/app/assets/stylesheets/blocks/report/_recent-reports.sass
@@ -43,6 +43,7 @@
   border-radius: 50%
   float: left
   margin-right: .75rem
+  background-color: $base
   .recent-reports-item.is-wip &
     opacity: .6
 
