--- a/app/assets/stylesheets/blocks/thread/_thread.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread.sass
@@ -37,6 +37,7 @@ $thread-header-author: 6rem
   +size(3.5rem)
   object-fit: cover
   border-radius: 50%
+  background-color: $base
   +media-breakpoint-down(sm)
     box-shadow: white 0 0 0 .375rem
 
