--- a/app/views/inquiries/_form.html.slim
+++ b/app/views/inquiries/_form.html.slim
@@ -2,15 +2,15 @@
   = render "errors", object: inquiry
   .auth-form-items
     .auth-form-item
-      = f.label :name, class: "a-sm-label is-required"
-      = f.text_field :name, class: "a-sm-text-input"
+      = f.label :name, class: "a-label is-required"
+      = f.text_field :name, class: "a-text-input"
     .auth-form-item
-      = f.label :email, class: "a-sm-label is-required"
-      = f.text_field :email, class: "a-sm-text-input"
+      = f.label :email, class: "a-label is-required"
+      = f.text_field :email, class: "a-text-input"
     .auth-form-item
-      = f.label :body, class: "a-sm-label is-required" do
+      = f.label :body, class: "a-label is-required" do
         | お問い合わせ内容
-      = f.text_area :body, class: "a-sm-text-input is-md"
+      = f.text_area :body, class: "a-text-input is-md"
 
   .auth-form-action.is-sign-up-action
     ul.auth-form-action__items
