サインアップフォームを修正

--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -165,6 +165,8 @@ textarea.a-sm-text-input
   margin-top: .5em
   &.is-text-align-right
     text-align: right
+  &.is-text-align-center
+    text-align: center
   [class*=a-button] + &
     margin-top: 1em
   p
