--- a/app/assets/stylesheets/blocks/form/_form-actions.sass
+++ b/app/assets/stylesheets/blocks/form/_form-actions.sass
@@ -20,7 +20,7 @@
     +media-breakpoint-down(sm)
       margin-bottom: 1.5rem
   &.is-main
-    width: 12rem
+    min-width: 12rem
     +media-breakpoint-down(sm)
       width: 100%
   +media-breakpoint-down(sm)
