確認ボタンをVue.jsに変更

--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -56,17 +56,7 @@ header.page-header
                     | 削除
 
         - if admin_login? || adviser_login?
-          .thread-admin-tools
-            ul.thread-admin-tools__items
-              li.thread-admin-tools__item
-                - if @product.checks.blank?
-                  = form_for @product.checks.new, class: "thread-check-form" do |f|
-                    = hidden_field_tag :user_id, current_user.id
-                    = hidden_field_tag :product_id, @product.id
-                    = f.submit "提出物を確認", class: "thread-check-form__action a-button is-md is-danger"
-                - else
-                  = form_for @product.checks.last, url: check_path(@product.checks.last), method: :delete, class: "thread-check-form" do |f|
-                    = f.submit "提出物の確認を取り消す", class: "thread-check-form__action is-text"
+          #js-check(data-checkable-id="#{@product.id}" data-checkable-type="product" data-checkable-label="#{Product.model_name.human}" data-check-id="#{@product.checks&.ids}")
 
       .thread-prev-next
         .thread-prev-next__item
