--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -28,7 +28,7 @@ header.page-header
           h1.thread-header__title
             | #{link_to @product.practice.title, @product.practice, class: "thread-header__title-link"}の提出物
           .thread-header__lower-side
-            = render "thread/thread_watch", watchable: @product
+            #js-watch(data-watchable-id="#{@product.id}", data-watchable-type="product")
         #js-check-stamp(data-checkable-id="#{@product.id}" data-checkable-type="product")
         .thread__description.js-target-blank.is-long-text.js-markdown-view
           =  @product.practice.goal
