--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -28,7 +28,7 @@ header.page-header
           h1.thread-header__title
             = @question.title
           .thread-header__lower-side
-            = render "thread/thread_watch", watchable: @question
+            #js-watch(data-watchable-id="#{@question.id}", data-watchable-type="question")
         - if @question.practice.present?
           .report-practices
             ul.report-practices__items
