flashのjsを削除 form周りのリファクタ

--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -13,7 +13,7 @@
     box-shadow: rgba(black, .07) 0 .0625rem .0625rem inset
 
 .a-label
-  +text-block(14px 1.45 0 .5rem, block 600)
+  +text-block(.875rem 1.4 0 .5rem, block 600)
   &.is-required
     &::after
       +fa(fas '\f069')
