--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -1,5 +1,4 @@
 @import common-imports
-@import blocks/shared/alert
+@import blocks/shared/flash
 @import blocks/shared/modal
-@import blocks/shared/nda
 @import welcome/**/*
