--- a/app/views/layouts/welcome.html.slim
+++ b/app/views/layouts/welcome.html.slim
@@ -21,7 +21,7 @@ html.is-application lang="ja"
   body#body class="#{body_class}"
     = render "google_tag_manager_body"
     .wrapper
-      = render "alert"
+      = render "flash"
       main.main
         = render "welcome/welcome_header"
         .welcome-page
