--- a/app/views/pages/show.html.slim
+++ b/app/views/pages/show.html.slim
@@ -12,8 +12,7 @@ header.page-header
               | 新規ページ
           li.page-header-actions__item
             = link_to :pages, class: "a-button is-md is-secondary is-block" do
-              i.fas.fa-angle-left
-              | 一覧に戻る
+              | Docs
 
 .page-body
   .container
