--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -8,7 +8,7 @@ header.page-header.is-margin-bottom-0
           .page-header-actions__item
             = link_to new_question_path, class: "a-button is-md is-warning is-block" do
               i.fas.fa-plus
-              | みんなに聞く
+              | 質問する
 
 = form_tag :questions, method: "get" do
   nav.sort-nav
