--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -9,11 +9,10 @@ header.page-header
           li.page-header-actions__item
             = link_to new_question_path, class: "a-button is-md is-warning is-block" do
               i.fas.fa-plus
-              | みんなに聞く
+              | 質問する
           li.page-header-actions__item
             = link_to questions_path, class: "a-button is-md is-secondary is-block" do
-              i.fas.fa-angle-left
-              | Q&A一覧へ
+              | Q&A一覧
 
 .page-body
   .container
