--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -13,7 +13,7 @@ header.page-header
               | 日報作成
           li.page-header-actions__item
             = link_to reports_path, class: "a-button is-md is-secondary is-block" do
-              | 日報一覧へ
+              | 日報一覧
 
 .page-body
   .container
