--- a/app/assets/stylesheets/blocks/shared/_errors.sass
+++ b/app/assets/stylesheets/blocks/shared/_errors.sass
@@ -5,11 +5,19 @@
   padding: 1rem 1.5rem
   max-width: 30rem
   +margin(horizontal, auto)
+  border-radius: .25rem
+  +media-breakpoint-down(sm)
+    padding: .875rem 1rem
 
 .errors__title
-  +text-block(.875rem 1.45 0 .8em, center 600 #6e3a47)
+  +text-block(.875rem 1.45 0 .8em, center 600 #711329)
+  +media-breakpoint-down(sm)
+    font-size: .8125rem
 
 .errors__item
-  +text-block(.8125rem 1.6 0 .2em, #6e3a47)
+  +text-block(.8125rem 1.6 0 .2em, #711329)
+  +media-breakpoint-down(sm)
+    font-size: .75rem
+
   &:last-child
     margin-bottom: 0
