--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -5,7 +5,7 @@ header.page-header
   .container
     .page-header__inner
       h2.page-header__title
-        | みんなに聞く
+        | 質問する
       .page-header-actions
         ul.page-header-actions__items
           li.page-header-actions__item
