--- a/app/views/reports/_form.html.slim
+++ b/app/views/reports/_form.html.slim
@@ -1,32 +1,33 @@
 = render "errors", object: report
 = form_for report do |f|
   .form__items
-    .form-item
-      .row
-        .col-lg-9.col-xs-12
-          .form-item
-            = f.label :practice, class: "a-label"
-            .select-practices
-              = f.select(:practice_ids, practice_options(categories), { include_hidden: false }, { multiple: true, class: "js-select2" })
-          .form-item
-            = f.label :title, class: "a-label"
-            = f.text_field :title, class: "a-text-input js-warning-form", placeholder: "主にやったことをタイトルにしよう"
-          .form-item
-            = f.label :reported_on, class: "a-label"
-            = f.text_field :reported_on, class: "datepicker a-text-input"
-          .form-item
-            = f.label :emotion, class: "a-label"
-            .a-button.is-md.is-secondary.is-select.test-select-emotions
-              = f.select(:emotion, Report.faces.invert, prompt: "選択してください")
+    .form__items-inner
+      .form-item
+        = f.label :practice, class: "a-label"
+        .select-practices
+          = f.select(:practice_ids, practice_options(categories), { include_hidden: false }, { multiple: true, class: "js-select2" })
+      .form-item
+        = f.label :title, class: "a-label"
+        = f.text_field :title, class: "a-text-input js-warning-form", placeholder: "主にやったことをタイトルにしよう"
+      .form-item
+        = f.label :reported_on, class: "a-label"
+        = f.text_field :reported_on, class: "datepicker a-text-input"
+      .form-item
+        = f.label :emotion, class: "a-label"
+        .a-button.is-md.is-secondary.is-select.test-select-emotions
+          = f.select(:emotion, Report.faces.invert, prompt: "選択してください")
 
-          #tasks
-            = f.fields_for :learning_times do |learning_time|
-              = render "learning_time_fields", f: learning_time
-            .links
-              = link_to_add_association f, :learning_times, class: "a-button is-md is-warning" do
-                i.fas.fa-plus
-                | 学習時間追加
+      .form-item#tasks
+        label.a-label
+          | 学習時間
+        = f.fields_for :learning_times do |learning_time|
+          = render "learning_time_fields", f: learning_time
+        .form-item__add-times
+          = link_to_add_association f, :learning_times, class: "a-button is-md is-primary" do
+            i.fas.fa-plus
+            | 学習時間追加
 
+  .form__items
     .form-item
       .row.js-markdown-parent
         .col-md-6.col-xs-12
