--- a/app/assets/stylesheets/blocks/form/_form-actions.sass
+++ b/app/assets/stylesheets/blocks/form/_form-actions.sass
@@ -21,6 +21,8 @@
       margin-bottom: 1.5rem
   &.is-main
     min-width: 12rem
+    &:first-child:last-child
+      min-width: 18rem
     +media-breakpoint-down(sm)
       width: 100%
   +media-breakpoint-down(sm)
