--- a/app/assets/stylesheets/variables/_colors.sass
+++ b/app/assets/stylesheets/variables/_colors.sass
@@ -9,6 +9,7 @@ $background-more-tint: #f7f7f9
 $default-text: #35343c
 $reversal-text: white
 $muted-text: #9da4a7
+$semi-muted-text: #62626f
 
 $side: $main
 $side-border: #6b4eca
