--- a/app/views/card/show.html.slim
+++ b/app/views/card/show.html.slim
@@ -10,12 +10,12 @@ header.page-header
     h1.auth-form__title
       | 登録済クレジットカード
   .auth-form__body
-    .auth-form-items
-      .auth-form-item
+    .form__items
+      .form-item
         .a-text-input.is-inputed.is-align-center
           | #{@card["brand"]} **** **** **** #{@card["last4"]} #{sprintf("%02d", @card["exp_month"].to_i)}/#{@card["exp_year"]}
-    .auth-form-action
-      ul.auth-form-action__items
-        li.auth-form-action__item
+    .form-actions
+      ul.form-actions__items
+        li.form-actions__item.is-main
           = link_to "カード変更", edit_card_path, class: "a-button is-lg is-warning is-block"
 = render "notice"
