--- a/app/assets/stylesheets/helpers/_long-text.sass
+++ b/app/assets/stylesheets/helpers/_long-text.sass
@@ -1,2 +1,7 @@
 .is-long-text
   +long-text-style(.9375rem, .8125rem)
+  &.is-sm
+    +media-breakpoint-up(md)
+      font-size: .8125rem
+    +media-breakpoint-down(sm)
+      font-size: .75rem
