--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -12,6 +12,7 @@
       .users-item__body
         .users-item__description
           p = truncate(user.description, length: 200)
+      = render "users/practices/completed_practices_progress", user: user
       - if current_user.admin?
         footer.card-footer
           .card-footer-actions
